# amethyst-tilemap-demo

./: Cargo.toml  README.md
config/: display.ron
resources/: map.tmx  tilemap_f.glsl
src/: main.rs
src/states/: mod.rs
src/states/playstate/: mod.rs  play.rs  tilemap.rs  tilemap_pass.rs
