[package]
name = "amethyst-tilemap-demo"
version = "0.1.0"
authors = ["Jonathan Louie <jonathanrlouie@gmail.com>"]

[dependencies]
amethyst = {git = "https://github.com/amethyst/amethyst", rev = "af76188"}
genmesh = "0.4"
gfx = { version = "0.16", features = ["serialize"] }
derivative = "1.0"
tiled = "0.7.2"